@@ -61,15 +61,16 @@ public class ResidentPurge implements Runnable {
 			if (!resident.isNPC() && (System.currentTimeMillis() - resident.getLastOnline() > (this.deleteTime)) && !BukkitTools.isOnline(resident.getName())) {
 				if (townless && resident.hasTown())
 					continue;
-				
-				count++;
-				
-				message(Translatable.of("msg_deleting_resident", resident.getName()));
-				
-				if (removeTown)
+
+				if (removeTown && resident.hasTown()) {
 					resident.removeTown();
-				else
-					townyUniverse.getDataSource().removeResident(resident);
+					count++;
+					continue;
+				}
+
+				count++;
+				townyUniverse.getDataSource().removeResident(resident);
+				message(Translatable.of("msg_deleting_resident", resident.getName()));
 			}
 		}
 
