@@ -10351,3 +10351,4 @@ v0.92.0.11:
   - Add TownCalculateMaxTownBlocksEvent, courtesy of Warrior with PR #7857.
     - Adds an event that is fired when the max town size is calculated, allowing plugins to change/override it in a more dynamic manner.
   - Fix throwing TownCalculateMaxTownBlocksEvent async.
+  - Fix resident purge messaging saying it is deleting a resident when its really just trying to remove the resident's town.
